--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -1,1 +1,21 @@
-<p>header works!</p>
+
+<nav class="nav">
+  <a class="nav-link active" aria-current="page" href="#">Diario</a>
+  <a class="nav-link" href="#">Iimitado</a>
+  <a class="nav-link" href="#">Clasificación</a>
+
+
+  Logooooooooooooooooooooooooooooo
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Inicio sesión</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Registrarse</a>
+    </li>
+  </ul>
+</nav>
+
+
+
+
