--- a/Frontend/MovieGuesser/src/app/footer/footer.component.html
+++ b/Frontend/MovieGuesser/src/app/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+
+<!-- <div class="container">
+  <div class="container-fluid justify-content-center" style="background-color: #e9ecef;">
+
+    <p>MovieGuesser - Por Ana Cámara y Olga Mandel - Creado bajo la Licencia Creative Commons Atribución-NoComercial 4.0 Internacional.</p>
+
+  </div>
+
+</div> -->
+
+<div class="row" id="pie">
+  <div  style="background-color: #f8f9fa">
+      <h5>Por Ana Cámara y Olga Mandel</h5>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">
+        <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
+      </a>
+        Licencia:  <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+  </div>
+</div>
+
