--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,1 +1,9 @@
-<p>diario works!</p>
+<div class="container text-center">
+  <h3>¡Adivina la película oculta!</h3>
+  <h5 style="justify-content: right;">Diario</h5>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <span class="input-group-text" id="basic-addon2">adivinar</span>
+    <span class="input-group-text" id="basic-addon2">rendirse</span>
+  </div>
+</div>
