--- a/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
@@ -1,1 +1,9 @@
-<p>ilimitado works!</p>
+<div class="container text-center" style="height: 500px;">
+  <h3>¡Adivina la película oculta!</h3>
+  <h5 style="justify-content: right;">Ilimitado</h5>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <button class="input-group-text" id="basic-addon2">adivinar</button>
+    <button class="input-group-text" id="basic-addon2">rendirse</button>
+  </div>
+</div>
