--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -16,7 +16,7 @@
   </ul>
 </nav> -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-center">
-  <div class="container-fluid">
+  <div class="container-fluid" style="width: 60%; background-color: #d9d9d9;">
     <a class="navbar-brand" [routerLink]="['diario']" routerLinkActive="active" href="#">Diario</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,15 +30,19 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <img src="assets/100x300logoFondoBlanco.png" alt="logoFondoBlanco">
-    <ul class="nav nav-pills nav-fill">
+    <!-- <img src="assets/100x300logoFondoBlanco.png" alt="logoFondoBlanco"> -->
+
+    <h2>MovieGuesser</h2>
+<!--     <ul class="nav nav-pills nav-fill">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Inicio sesión</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Registrarse</a>
       </li>
-    </ul>
+    </ul> -->
+    <button type="button" class="btn btn-primary nav-link active" href="#" >Inicio sesión</button>
+    <button type="button" class="btn btn-primary nav-link" href="#">Registrarse</button>
   </div>
 </nav>
 
