--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,9 +1,12 @@
-<div class="container text-center">
+<div class="container text-center" style="height: 500px;">
   <h3>¡Adivina la película oculta!</h3>
   <h5 style="justify-content: right;">Diario</h5>
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
-    <span class="input-group-text" id="basic-addon2">adivinar</span>
-    <span class="input-group-text" id="basic-addon2">rendirse</span>
+  <div class="container-fluid" style="width: 60%; background-color: #d9d9d9;">
+      <div class="input-group mb-3" style="width: 100%; background-color: #d9d9d9;">
+        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <button class="btn btn-primary input-group-text " id="basic-addon2">adivinar</button>
+        <button class="btn btn-primary input-group-text" id="basic-addon2">rendirse</button>
+      </div>
   </div>
 </div>
+<!-- style="width: 60%; background-color: #d9d9d9;" -->
