--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -16,30 +16,30 @@
   </ul>
 </nav> -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-center">
-  <div class="row">
-  
-  <div class="col-4">
-    <div class="row">
-      <div class="col-3">
-        <a class="navbar-brand" style="font-size: auto" [routerLink]="['diario']" routerLinkActive="active" href="#">Diario</a>
+  <div class="row" style="width: 80%; align-items: center;">
+<!-- style="align-content: center;" -->
+    <div class="col-4" >
+      <div class="row" >
+        <div class="col-3" >
+          <a class="navbar-brand" style="font-size: auto" [routerLink]="['diario']" routerLinkActive="active" href="#">Diario</a>
+        </div>
+
+        <div class="col-4">
+          <a class="navbar-brand" style="font-size: auto" [routerLink]="['ilimitado']" routerLinkActive="active" href="#">Ilimitado</a>
+        </div>
+
+        <div class="col-5">
+          <a class="navbar-brand" style="font-size: auto" [routerLink]="['clasificacion']" routerLinkActive="active" href="#">Clasificación</a>
+        </div>
       </div>
 
-      <div class="col-4">
-        <a class="navbar-brand" style="font-size: auto" [routerLink]="['ilimitado']" routerLinkActive="active" href="#">Ilimitado</a>
-      </div>
-
-      <div class="col-5">
-        <a class="navbar-brand" style="font-size: auto" [routerLink]="['clasificacion']" routerLinkActive="active" href="#">Clasificación</a>
-      </div>
     </div>
-        
-  </div>
-      
-      
-      <!-- <img src="assets/100x300logoFondoBlanco.png" alt="logoFondoBlanco"> -->
-      <div class="col-4">
 
-        <h2>MovieGuesser</h2>
+
+      <!-- <img src="assets/100x300logoFondoBlanco.png" alt="logoFondoBlanco"> -->
+      <div class="col-4 ">
+
+        <h2 style="text-align: center;">MovieGuesser</h2>
       </div>
       <!--     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
@@ -49,18 +49,18 @@
           <a class="nav-link" href="#">Registrarse</a>
         </li>
       </ul> -->
-      
-      <div class="col-4">
-        <button type="button" class="btn btn-primary nav-link active" href="#">Inicio sesión<button>
-          
-          <button type="button" class="btn btn-primary nav-link"  ref="#">Registrarse</button>
-        </button>
-        </button>
+
+      <div class="col-4 d-flex" >
+
+        <button type="button" class="btn btn-primary nav-link " style="width: 100%; font-size: large;" href="#">Inicio sesión</button>
+
+        <button type="button" class="btn btn-primary nav-link active" style="width: 100%; font-size: large;" ref="#">Registrarse</button>
+
       </div>
-    
-    
+
+
   </div>
-  
+
 </nav>
 
 
