--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,6 +1,15 @@
 <div class="container text-center" style="height: 500px;">
-  <h3>¡Adivina la película oculta!</h3>
-  <h5 style="justify-content: right;">Diario</h5>
+
+  <div class="container text-center">
+    <div class="row">
+      <h3 style="text-align: right; width: 65%;">¡Adivina la película oculta!</h3>
+    </div>
+
+    <div class="row" >
+      <h6 style="text-align: right; width: 65%;" >Diario</h6>
+    </div>
+  </div>
+
   <div class="container-fluid" style="width: 60%; background-color: #d9d9d9;">
       <div class="input-group mb-3" style="width: 100%; background-color: #d9d9d9;">
         <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
