--- a/Frontend/MovieGuesser/src/app/pagina/clasificacion/clasificacion.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/clasificacion/clasificacion.component.html
@@ -1,4 +1,68 @@
-<div class="container text-center" style="height: 500px;">
+
+
+
+<div class="container " style="height: 500px; background-color: aqua;">
+
+
+
+
+ <div class="row" >
+
+  <div class="card" style="width: 35%;">
+    <div class="card-header">
+      Historial de películas
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A third item</li>
+    </ul>
+  </div>
+
+
+
+  <div class="card" style="width: 35%;">
+    <div class="card-header">
+      Mejores jugadores
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A third item</li>
+    </ul>
+  </div>
+
+
+</div>
+
+<!--       <div class="card" style="width: 35%;">
+        <div class="card-header">
+          Historial de películas
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
+      </div>
+
+
+
+      <div class="card" style="width: 35%;">
+        <div class="card-header">
+          Featured
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
+      </div> -->
+
+
+
 
 
 </div>
