--- a/Frontend/MovieGuesser/src/app/header/header.component.css
+++ b/Frontend/MovieGuesser/src/app/header/header.component.css
@@ -1,3 +1,11 @@
-button.btn.secondary.nav.link.active{
-  background-color: red;
+.btn.btn-primary.nav-link{
+  background-color: #0d6efd;
+  font-size: large;
+  padding: 2%;
+  border: 3px solid black;
 }
+nav{
+  background-color: #D9D9D9;
+  border-bottom: 3px solid black;
+}
+
