--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -1,23 +1,6 @@
-
-<!-- <nav class="nav justify-content-center">
-  <a class="nav-link active" aria-current="page" href="#">Diario</a>
-  <a class="nav-link" href="#">Iimitado</a>
-  <a class="nav-link" href="#">Clasificación</a>
-
-
-  <img src="assets/logoFondoBlanco.png" alt="logoFondoBlanco">
-  <ul class="nav nav-pills nav-fill">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Inicio sesión</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Registrarse</a>
-    </li>
-  </ul>
-</nav> -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-center">
+<nav class="navbar navbar-expand-lg  justify-content-center">
   <div class="row" style="width: 80%; align-items: center;">
-<!-- style="align-content: center;" -->
+    <br>
     <div class="col-4" >
       <div class="row" >
         <div class="col-3" >
@@ -52,9 +35,9 @@
 
       <div class="col-4 d-flex" >
 
-        <button type="button" class="btn btn-primary nav-link " style="width: 100%; font-size: large;" href="#">Inicio sesión</button>
+        <button type="button" class="btn btn-primary nav-link " [routerLink]="['login']" href="#">Inicio sesión</button>&nbsp; &#160;
 
-        <button type="button" class="btn btn-primary nav-link active" style="width: 100%; font-size: large;" ref="#">Registrarse</button>
+        <button type="button" class="btn btn-primary nav-link " [routerLink]="['registro']" href="#">Registrarse</button>
 
       </div>
 
