--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,21 +1,21 @@
 <div class="container text-center" style="height: 500px;">
-
+  <br>
   <div class="container text-center">
     <div class="row">
       <h3 style="text-align: right; width: 65%;">¡Adivina la película oculta!</h3>
     </div>
 
     <div class="row" >
-      <h6 style="text-align: right; width: 65%;" >Diario</h6>
+      <h6 style="text-align: right; width: 65%;" >Reto diario</h6>
     </div>
   </div>
 
-  <div class="container-fluid" style="width: 60%; background-color: #d9d9d9;">
-      <div class="input-group mb-3" style="width: 100%; background-color: #d9d9d9;">
-        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
-        <button class="btn btn-primary input-group-text " id="basic-addon2">adivinar</button>
-        <button class="btn btn-primary input-group-text" id="basic-addon2">rendirse</button>
+  <div class="container-fluid" style="width: 60%; ">
+      <div class="input-group mb-3" >
+        <input type="text" class="form-control" placeholder="" >
+        <button class="btn btn-primary input-group-text " id="basic-addon2" >Adivinar</button>
+       <!--  <button class="btn btn-primary input-group-text" id="basic-addon2">rendirse</button> -->
       </div>
   </div>
 </div>
-<!-- style="width: 60%; background-color: #d9d9d9;" -->
+
