--- a/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
@@ -1,9 +1,20 @@
 <div class="container text-center" style="height: 500px;">
-  <h3>¡Adivina la película oculta!</h3>
-  <h5 style="justify-content: right;">Ilimitado</h5>
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
-    <button class="input-group-text" id="basic-addon2">adivinar</button>
-    <button class="input-group-text" id="basic-addon2">rendirse</button>
+  <br>
+  <div class="container text-center">
+    <div class="row">
+      <h3 style="text-align: right; width: 65%;">¡Adivina la película oculta!</h3>
+    </div>
+
+    <div class="row" >
+      <h6 style="text-align: right; width: 65%;" >Reto diario</h6>
+    </div>
+  </div>
+
+  <div class="container-fluid" style="width: 60%; ">
+      <div class="input-group mb-3" >
+        <input type="text" class="form-control" placeholder="" >
+        <button class="btn btn-primary input-group-text " id="basic-addon2" >Adivinar</button>
+        <button class="btn btn-primary input-group-text" id="basic-addon2" style="background-color: #FA6666;">Rendirse</button>
+      </div>
   </div>
 </div>
