--- a/Frontend/MovieGuesser/src/app/pagina/login/login.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="container">
+  <br>
+  <label for="exampleFormControlInput1" class="form-label">Nombre de usuario o correo electrónico</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+  <br>
+  <label for="inputPassword5" class="form-label">Contraseña</label>
+  <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+
+  <br>
+  <div class="container text-center" >
+    <button class="btn btn-primary input-group-text " id="basic-addon2" >Adivinar</button>
+  </div>
+
+</div>
+
+
