--- a/Frontend/MovieGuesser/src/app/pagina/registro/registro.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/registro/registro.component.html
@@ -1,1 +1,21 @@
-<p>registro works!</p>
+<div class="container">
+  <br>
+  <label for="exampleFormControlInput1" class="form-label">Nombre de usuario</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+  <br>
+  <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+  <br>
+  <label for="inputPassword5" class="form-label">Contraseña</label>
+  <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+  <br>
+  <label for="inputPassword5" class="form-label">Confirmar contraseña</label>
+  <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+
+  <br>
+  <br>
+  <div class="container2" >
+    <button class="btn btn-primary input-group-text " id="basic-addon2" >Crear cuenta</button>
+  </div>
+
+</div>
