--- a/Frontend/MovieGuesser/src/app/pagina/clasificacion/clasificacion.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/clasificacion/clasificacion.component.html
@@ -1,7 +1,7 @@
 
 
 
-<div class="container " style="height: 500px; background-color: aqua;">
+<div class="container ">
 
 
 
@@ -25,6 +25,11 @@
   <div class="card" style="width: 35%;">
     <div class="card-header">
       Mejores jugadores
+ <!--      <div class="form-check form-switch">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Hoy</label>
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Siempre</label>
+      </div> -->
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">An item</li>
@@ -66,3 +71,5 @@
 
 
 </div>
+
+<!-- <hr style="width: 100%; " /> -->
