--- a/Frontend/MovieGuesser/src/app/pagina/login/login.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/login/login.component.html
@@ -7,8 +7,9 @@
   <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
 
   <br>
-  <div class="container text-center" >
-    <button class="btn btn-primary input-group-text " id="basic-addon2" >Adivinar</button>
+  <br>
+  <div class="container2" >
+    <button class="btn btn-primary input-group-text " id="basic-addon2" >Iniciar sesión</button>
   </div>
 
 </div>
