--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -16,6 +16,15 @@
         <button class="btn btn-primary input-group-text " id="basic-addon2" >Adivinar</button>
        <!--  <button class="btn btn-primary input-group-text" id="basic-addon2">rendirse</button> -->
       </div>
+
+
+      <div >
+        <h2>Películas:</h2>
+        <ul>
+          <li *ngFor="let pelicula of pelis">{{ pelicula.Actors }}</li>
+          <li *ngForEach></li>
+        </ul>
+      </div>
   </div>
 </div>
 
