--- a/Frontend/MovieGuesser/src/app/header/header.component.css
+++ b/Frontend/MovieGuesser/src/app/header/header.component.css
@@ -1,4 +1,45 @@
-.btn.btn-primary.nav-link{
+
+.navbar.navbar-expand-lg.navbar-light{
+  background-color: #D9D9D9;
+}
+
+a{
+  font-size: medium;
+  font-weight: 500;
+}
+
+.navbar-nav.me-auto.mb-2.mb-lg-0{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+}
+
+button{
+  background-color: #70BFF9;
+  font-size: large;
+  padding: 0.8%;
+  border: 3px solid black;
+  border-radius: 10px;
+}
+
+.nav-link {
+  color: #000; /* Cambia el color del texto a tu preferencia */
+  text-decoration: none; /* Elimina el subrayado */
+}
+
+/* .collapse.navbar-collapse{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #D9D9D9;
+  color: #fff;
+  height: 50px;
+  padding: 10px;
+} */
+
+/* .btn.btn-primary.nav-link{
   background-color: #0d6efd;
   font-size: large;
   padding: 2%;
@@ -7,5 +48,71 @@
 nav{
   background-color: #D9D9D9;
   border-bottom: 3px solid black;
-}
+} */
 
+/* Estilos para pantallas grandes, medianas y extra grandes */
+/*   @media screen and (min-width: 992px) {
+
+    .navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #D9D9D9;
+        color: #fff;
+        height: 50px;
+        padding: 10px;
+    }
+
+
+
+
+    .content {
+        padding: 20px;
+    }
+
+
+
+    .menu {
+        display: none;
+    }
+} */
+
+/* Estilos para pantallas pequeñas y extra pequeñas */
+/* @media screen and (max-width: 991px) {
+
+    .navbar {
+        background-color: #333;
+        color: #fff;
+        height: 50px;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .content {
+        padding: 20px;
+    }
+
+
+
+
+    .menu {
+        display: block;
+    }
+
+
+    .menu-icon {
+        display: block;
+        background-color: #333;
+        color: #fff;
+        height: 50px;
+        padding: 10px;
+    }
+
+    .menu-options {
+        display: none;
+    }
+}
+ */
