--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  justify-content-center">
+<!-- <nav class="navbar navbar-expand-lg  justify-content-center">
   <div class="row" style="width: 80%; align-items: center;">
     <br>
     <div class="col-4" >
@@ -15,23 +15,11 @@
           <a class="navbar-brand" style="font-size: auto" [routerLink]="['clasificacion']" routerLinkActive="active" href="#">Clasificación</a>
         </div>
       </div>
-
-    </div>
-
-
+    </div> -->
       <!-- <img src="assets/100x300logoFondoBlanco.png" alt="logoFondoBlanco"> -->
-      <div class="col-4 ">
-
+<!--       <div class="col-4 ">
         <h2 style="text-align: center;">MovieGuesser</h2>
       </div>
-      <!--     <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio sesión</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Registrarse</a>
-        </li>
-      </ul> -->
 
       <div class="col-4 d-flex" >
 
@@ -44,7 +32,48 @@
 
   </div>
 
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <div class="container-fluid">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['diario']" routerLinkActive="active">Reto diario</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['ilimitado']" routerLinkActive="active">Ilimitado</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['clasificacion']" routerLinkActive="active">Clasificación</a>
+        </li>
+
+        <div class="logo">
+          <img src="logo.png" alt="Logo" style="margin-left: 10px; margin-right: 10px;">
+        </div>
+
+
+
+        <button>Iniciar sesión</button>
+        <button>Registrarse</button>
+
+
+      </ul>
+
+    </div>
+  </div>
 </nav>
+    <!-- Barra de navegación -->
+
+
+  <!-- Menú de hamburguesa -->
 
 
 
