--- a/Frontend/MovieGuesser/src/app/tarjeta-resultados/tarjeta-resultados.component.html
+++ b/Frontend/MovieGuesser/src/app/tarjeta-resultados/tarjeta-resultados.component.html
@@ -1,1 +1,23 @@
-<p>tarjeta-resultados works!</p>
+<!--     <div id="game-container">
+      <h1>Reto Diario</h1>
+      <input type="text" id="guess-input" placeholder="Introduce el título de la película">
+      <button id="submit-btn">Comprobar</button>
+      <table id="movie-details">
+        <thead>
+          <tr>
+            <th>Año</th>
+            <th>Género</th>
+            <th>Director</th>
+            <th>Actores Principales</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="year">{{resultado.year}}</td>
+            <td id="genre"></td>
+            <td id="director"></td>
+            <td id="actors"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div> -->
