--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -56,7 +56,7 @@
         </li>
 
         <div class="logo">
-          <img src="logo.png" alt="Logo" style="margin-left: 10px; margin-right: 10px;">
+          <img src="" alt="Logo" style="margin-left: 10px; margin-right: 10px;">
         </div>
 
 
@@ -70,10 +70,6 @@
     </div>
   </div>
 </nav>
-    <!-- Barra de navegación -->
-
-
-  <!-- Menú de hamburguesa -->
 
 
 
