--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,4 +1,45 @@
-<div class="container text-center" style="height: 500px;">
+<div class="container text-center">
+  <div class="row">
+    <label for="inputTituloIntroducido" style="font-size: xx-large;">¡Adivina la película oculta!</label>
+  </div><br>
+
+  <div class="row">
+    <div class="input-group mb-3">
+      <input type="text" id="inputTituloIntroducido" [(ngModel)]="tituloIntroducido">
+      <button (click)="verificarTitulo()">Adivinar</button>
+    </div>
+  </div>
+
+
+
+
+  <div *ngIf="adivinado" class="row">
+    <p>¡Has adivinado la película!</p>
+  </div>
+
+  <div *ngIf="tituloIntroducido">
+    <table *ngIf="!adivinado">
+      <thead>
+        <tr>
+          <th>Año</th>
+          <th>Género</th>
+          <th>Director</th>
+          <th>Actores</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td [style.background-color]="coincideAnio ? 'green' : 'red'">{{ pelicula.anio }}</td>
+          <td [style.background-color]="coincideGenero ? 'green' : 'red'">{{ pelicula.genero }}</td>
+          <td [style.background-color]="coincideDirector ? 'green' : 'red'">{{ pelicula.director }}</td>
+          <td [style.background-color]="coincideActores ? 'green' : 'red'">{{ pelicula.actores }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<!-- <div class="container text-center" style="height: 500px;">
   <br>
   <div class="container text-center">
     <div class="row">
@@ -12,19 +53,13 @@
 
   <div class="container-fluid" style="width: 60%; ">
       <div class="input-group mb-3" >
-        <input type="text" class="form-control" placeholder="" >
-        <button class="btn btn-primary input-group-text " id="basic-addon2" >Adivinar</button>
-       <!--  <button class="btn btn-primary input-group-text" id="basic-addon2">rendirse</button> -->
+
+        <input type="text" id="inputTituloIntroducido" class="form-control" placeholder="" >
+
+        <button class="btn btn-primary input-group-text " id="botonEnviar" >Adivinar</button>
+
       </div>
 
-
-      <div >
-        <h2>Películas:</h2>
-        <ul>
-          <li *ngFor="let pelicula of pelis">{{ pelicula.Actors }}</li>
-          <li *ngForEach></li>
-        </ul>
-      </div>
   </div>
-</div>
+</div> -->
 
