--- a/Frontend/MovieGuesser/src/app/footer/footer.component.html
+++ b/Frontend/MovieGuesser/src/app/footer/footer.component.html
@@ -13,10 +13,11 @@
     <hr style="margin-left: 10px; margin-right: 10px;" />
     <div >
         <h5>Por Ana Cámara y Olga Mandel</h5>
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">
-          <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+          <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
         </a>
-          Licencia:  <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+        <br/>
+        Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Attribution-ShareAlike 4.0 Internacional</a>.
     </div>
   </div>
 
