--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -55,8 +55,9 @@
           <a class="nav-link" [routerLink]="['clasificacion']" routerLinkActive="active">Clasificación</a>
         </li>
 
-        <div class="logo">
-          <img src="" alt="Logo" style="margin-left: 10px; margin-right: 10px;">
+        <div class="logo d-none d-lg-block" >
+          <!-- <img src="/assets/logoOlga5.svg" alt="Logo" > -->
+          <p style="font-size: 3.5rem;">MovieGuesser</p>
         </div>
 
 
