--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center alto">
   <div class="row">
     <label for="inputTituloIntroducido" style="font-size: xx-large;">¡Adivina la película oculta!</label>
   </div><br>
@@ -9,9 +9,6 @@
       <button (click)="verificarTitulo()">Adivinar</button>
     </div>
   </div>
-
-
-
 
   <div *ngIf="adivinado" class="row">
     <p>¡Has adivinado la película!</p>
