--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -56,8 +56,8 @@
         </li>
 
         <div class="logo d-none d-lg-block" >
-          <!-- <img src="/assets/logoOlga5.svg" alt="Logo" > -->
-          <p style="font-size: 3.5rem;">MovieGuesser</p>
+          <img src="/assets/logoOlga5.svg" alt="Logo" >
+          <!-- <p style="font-size: 3.5rem;">MovieGuesser</p> -->
         </div>
 
 
