--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.css
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.css
@@ -1,3 +1,11 @@
+.color-rojo{
+  background-color: red;
+}
+
+.color-verde{
+  background-color: green;
+}
+
 button{
   width: 20%;
   color: black;
