--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -62,8 +62,8 @@
 
 
 
-        <button>Iniciar sesión</button>
-        <button>Registrarse</button>
+        <button [routerLink]="['login']" routerLinkActive="active">Iniciar sesión</button>
+        <button [routerLink]="['registro']" routerLinkActive="active">Registrarse</button>
 
 
       </ul>
