--- a/Frontend/MovieGuesser/src/app/header/header.component.html
+++ b/Frontend/MovieGuesser/src/app/header/header.component.html
@@ -56,7 +56,7 @@
         </li>
 
         <div class="logo d-none d-lg-block" >
-          <img src="/assets/logoOlga5.svg" alt="Logo" >
+          <img src="/assets/logoAna.svg" alt="Logo" width="500">
           <!-- <p style="font-size: 3.5rem;">MovieGuesser</p> -->
         </div>
 
