--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -1,46 +1,4 @@
-<div class="container text-center alto">
-  <div class="row">
-    <label for="inputTituloIntroducido" style="font-size: xx-large;">¡Adivina la película oculta!</label>
-  </div><br>
-  <div class="row" >
-    <h6 style="text-align: right; width: 33%;" >Reto Diario</h6>
-  </div>
-
-  <div class="row">
-    <div class="input-group mb-3">
-      <input type="text" #busqueda (keyup.enter)="getBusquedaPeliculaUsuario(busqueda)">
-      <button>Adivinar</button>
-
-    </div>
-  </div>
-
-  <table class="table table-bordered">
-
-    <tbody *ngFor="let pelicula of peliculaUsuario">
-      <tr>
-        <td [ngClass]="{'color-verde': coincideTitulo(pelicula), 'color-rojo': !coincideTitulo(pelicula)}">{{ pelicula.Title }}</td>
-        <td [ngClass]="{'color-verde': coincideGenero(pelicula), 'color-rojo': !coincideGenero(pelicula)}">{{ pelicula.Genre }}</td>
-        <td [ngClass]="{'color-verde': coincideAnio(pelicula), 'color-rojo': !coincideAnio(pelicula)}">{{ pelicula.Year }}</td>
-        <td [ngClass]="{'color-verde': coincideActores(pelicula), 'color-rojo': !coincideActores(pelicula)}">{{ pelicula.Actors }}</td>
-        <td [ngClass]="{'color-verde': coincideDirector(pelicula), 'color-rojo': !coincideDirector(pelicula)}">{{ pelicula.Director }}</td>
-      </tr>
-    </tbody>
-  </table>
-<br><br><br>
-</div>
-
-<!--   <div *ngIf="getPeliculaUsuario()">
-    <p>Genre: {{ getPeliculaUsuario()?.Genre }}</p>
-    <p>Year: {{ getPeliculaUsuario()?.Year }}</p>
-    <p>Actors: {{ getPeliculaUsuario()?.Actors }}</p>
-    <p>Director: {{ getPeliculaUsuario()?.Director }}</p>
-  </div> -->
-
-
-<!-- <app-tarjeta-resultados *ngFor="let resultado of getPeliculaUsuario() | keyvalue" [tarjeta]="resultado"></app-tarjeta-resultados> -->
-
-
-<!-- <div class="container text-center" style="height: 500px;">
+<div class="container text-center" style="height: 500px;">
   <br>
   <div class="container text-center">
     <div class="row">
@@ -48,19 +6,40 @@
     </div>
 
     <div class="row" >
-      <h6 style="text-align: right; width: 65%;" >Reto diario</h6>
+      <h6 style="text-align: right; width: 65%;" >Diario</h6>
     </div>
   </div>
 
-  <div class="container-fluid" style="width: 60%; ">
-      <div class="input-group mb-3" >
+<!--   <div class="row">
+    <label for="inputTituloIntroducido" style="font-size: xx-large;">¡Adivina la película oculta!</label>
+  </div><br>
+  <div class="row" >
+    <h3 style="text-align: right; width: 33%;" >Reto Diario</h3>
+  </div> -->
 
-        <input type="text" id="inputTituloIntroducido" class="form-control" placeholder="" >
-
-        <button class="btn btn-primary input-group-text " id="botonEnviar" >Adivinar</button>
-
-      </div>
-
+  <div class="row">
+    <div class="input-group mb-3">
+      <input type="text" #busqueda (keyup.enter)="getBusquedaPeliculaUsuario(busqueda)">
+      <button (click)="getBusquedaPeliculaUsuario(busqueda)">Adivinar</button>
+    </div>
+    <small *ngIf="isError" class="text-danger">{{ errorMessage }}</small>
   </div>
-</div> -->
 
+  <div *ngIf="isLoading" class="spinner-border text-secondary ml-auto" role="status">
+    <span class="sr-only"></span>
+  </div>
+
+  <table class="table table-bordered">
+
+    <tbody *ngFor="let pelicula of peliculaUsuario">
+      <tr>
+        <td [ngClass]="{'color-verde': coincideTitulo(pelicula), 'color-rojo': !coincideTitulo(pelicula)}">{{ pelicula.Title }}</td>
+        <td [ngClass]="{'color-verde': coincideGenero(pelicula) == 'correcto', 'color-rojo': coincideGenero(pelicula) == 'incorrecto', 'color-naranja': coincideGenero(pelicula) == 'parcial'}">{{ pelicula.Genre }}</td>
+        <td [ngClass]="{'color-verde': coincideAnio(pelicula), 'color-rojo': !coincideAnio(pelicula)}">{{ pelicula.Year }}</td>
+        <td [ngClass]="{'color-verde': coincideActores(pelicula) == 'correcto', 'color-rojo': coincideActores(pelicula) == 'incorrecto', 'color-naranja': coincideActores(pelicula) == 'parcial'}">{{ pelicula.Actors }}</td>
+        <td [ngClass]="{'color-verde': coincideDirector(pelicula), 'color-rojo': !coincideDirector(pelicula)}">{{ pelicula.Director }}</td>
+      </tr>
+    </tbody>
+  </table>
+<br><br><br>
+</div>
