--- a/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.css
+++ b/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.css
@@ -1,7 +1,13 @@
-input{
-  border-radius: 15px;
-  width: 60%;
-  text-align: center;
+.color-rojo{
+  background-color: #E35047;
+}
+
+.color-verde{
+  background-color: #7BB662;
+}
+
+.color-naranja {
+  background-color: #FFD301;
 }
 
 button{
@@ -13,12 +19,10 @@ button{
   background-color: #70BFF9;
 }
 
-.inline.button {
-  display: inline;
-}
-
-.inline.red.button {
-  background-color: rgb(255, 92, 92);
+input{
+  border-radius: 15px;
+  width: 60%;
+  text-align: center;
 }
 
 .input-group.mb-3{
@@ -27,11 +31,42 @@ button{
   justify-content: center;
 }
 
-
-.color-rojo{
-  background-color: red;
+.inline.button {
+  display: inline;
 }
 
-.color-verde{
-  background-color: green;
+.inline.red.button {
+  background-color: rgb(255, 92, 92);
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 8px;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  .container {
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .container {
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .container {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px){
+  .container {
+    font-size: 14px;
+  }
+}
+
+
+
+
+
