--- a/Frontend/MovieGuesser/src/app/pagina/registro/registro.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/registro/registro.component.html
@@ -1,21 +1,21 @@
 <div class="container">
   <br>
-  <label for="exampleFormControlInput1" class="form-label">Nombre de usuario</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+  <label for="usuario" class="form-label">Nombre de usuario</label>
+  <input type="text" class="form-control" name="usuario" id="usuario" placeholder="" [(ngModel)]="usuario">
   <br>
-  <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+  <label for="email" class="form-label">Correo electrónico</label>
+  <input type="email" class="form-control" id="email" placeholder="" [(ngModel)]="email">
   <br>
-  <label for="inputPassword5" class="form-label">Contraseña</label>
-  <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+  <label for="password" class="form-label">Contraseña</label>
+  <input type="password" id="password" class="form-control" aria-labelledby="passwordHelpBlock" [(ngModel)]="password">
   <br>
-  <label for="inputPassword5" class="form-label">Confirmar contraseña</label>
-  <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+  <label for="password_confirmation" class="form-label">Confirmar contraseña</label>
+  <input type="password" id="password_confirmation" class="form-control" aria-labelledby="passwordHelpBlock" [(ngModel)]="password_confirmation">
 
   <br>
   <br>
   <div class="container2" >
-    <button class="btn btn-primary input-group-text " id="basic-addon2" >Crear cuenta</button>
+    <button class="btn btn-primary input-group-text " id="basic-addon2" (click)="registerUser()" >Crear cuenta</button>
   </div>
 
 </div>
