--- a/Frontend/MovieGuesser/src/app/footer/footer.component.html
+++ b/Frontend/MovieGuesser/src/app/footer/footer.component.html
@@ -1,15 +1,5 @@
 
-<!-- <div class="container">
-  <div class="container-fluid justify-content-center" style="background-color: #e9ecef;">
-
-    <p>MovieGuesser - Por Ana Cámara y Olga Mandel - Creado bajo la Licencia Creative Commons Atribución-NoComercial 4.0 Internacional.</p>
-
-  </div>
-
-</div> -->
-
-
-  <div  id="pie" style="width: 100%;" >
+  <div class="footer" id="pie" style="width: 100%;" >
     <hr style="margin-left: 10px; margin-right: 10px;" />
     <div >
         <h5>Por Ana Cámara y Olga Mandel</h5>
