--- a/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/diario/diario.component.html
@@ -2,20 +2,13 @@
   <br>
   <div class="container text-center">
     <div class="row">
-      <h3 style="text-align: right; width: 65%;">¡Adivina la película oculta!</h3>
+      <h3 style="text-align: center; ">¡Adivina la película oculta!</h3>
     </div>
 
     <div class="row" >
       <h6 style="text-align: right; width: 65%;" >Diario</h6>
     </div>
   </div>
-
-<!--   <div class="row">
-    <label for="inputTituloIntroducido" style="font-size: xx-large;">¡Adivina la película oculta!</label>
-  </div><br>
-  <div class="row" >
-    <h3 style="text-align: right; width: 33%;" >Reto Diario</h3>
-  </div> -->
 
   <div class="row">
     <div class="input-group mb-3">
