--- a/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
@@ -2,7 +2,7 @@
   <br>
   <div class="container text-center">
     <div class="row">
-      <h3 style="text-align: right; width: 65%;">¡Adivina la película oculta!</h3>
+      <h3 style="text-align: center; ">¡Adivina la película oculta!</h3>
     </div>
 
     <div class="row" >
