--- a/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="row" >
-      <h6 style="text-align: right; width: 65%;" >Ilimitado</h6>
+      <h6 style="text-align: right; width: 65%;">Ilimitado</h6>
     </div>
   </div>
 
@@ -17,7 +17,12 @@
       <button class="inline button" (click)="buscarPelicula(busqueda)">Adivinar</button>
       <button class="inline red button" (click)="intentarDeNuevo()">Intentar de nuevo</button>
     </div>
-    <small *ngIf="isError" class="text-danger">{{ errorMessage }}</small>
+    <small  *ngIf="isError" class="text-danger">{{ errorMessage }}</small>
+    <i class="bi bi-lightbulb">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16">
+        <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
+      </svg>
+    </i>
   </div>
 
 
@@ -25,7 +30,7 @@
     <span class="sr-only"></span>
   </div>
 
-  <table class="table table-bordered">
+  <table class="table table-bordered" *ngIf="peliculasBuscadas.length > 0">
 
     <tbody *ngFor="let pelicula of peliculasBuscadas">
       <tr>
@@ -35,6 +40,10 @@
         <td [ngClass]="{'color-verde': coincideActores(pelicula) == 'correcto', 'color-rojo': coincideActores(pelicula) == 'incorrecto', 'color-naranja': coincideActores(pelicula) == 'parcial'}">{{ pelicula.Actors }}</td>
         <td [ngClass]="{'color-verde': coincideDirector(pelicula), 'color-rojo': !coincideDirector(pelicula)}">{{ pelicula.Director }}</td>
       </tr>
+      <tr *ngIf="ganaste">
+        <td colspan="5">¡Has ganado!</td>
+      </tr>
+
     </tbody>
   </table>
   <br><br><br>
