--- a/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
+++ b/Frontend/MovieGuesser/src/app/pagina/ilimitado/ilimitado.component.html
@@ -13,7 +13,7 @@
 
   <div class="row">
     <div class="input-group mb-3">
-      <input type="text" #busqueda (keyup.enter)="buscarPelicula(busqueda)">
+      <input [disabled]='disableTextbox' type="text" #busqueda (keyup.enter)="buscarPelicula(busqueda)">
       <button class="inline button" (click)="buscarPelicula(busqueda)">Adivinar</button>
       <button class="inline red button" (click)="intentarDeNuevo()">Intentar de nuevo</button>
     </div>
